--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "type": "module",
   "dependencies": {
     "@enre-ts/doc-parser": "^0.4.2",
+    "@enre-ts/doc-validator": "^0.4.2",
     "@enre-ts/shared": "^0.4.2",
+    "@enre-ts/naming": "^0.4.2",
     "@enre-ts/test-finder": "^0.4.2",
     "@enre-ts/test-generator": "^0.4.2",
     "commander": "^10.0.1"
